# SimplyDiscordBot

./: .env  .env.sample  Dockerfile  ReadMe.md  commands.py  create_db.sql  db.py  db_history.sql  docker-compose.yaml  levelUp.py  main.py  pipfile  pyproject.toml  requirements.txt  runk.py
database/: create_db.sql  db.py
db/: db.py  dbAccessor.py
src/: commands.py  levelUp.py  main.py  runk.py
src/database/: create_db.sql  db.py  dbAccessor.py
