[tool.poetry]
name = "simplydiscordbot"
version = "0.1.0"
description = ""
authors = ["SimpleCookie"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
repl = "^1.0"
mysql-connector-python-rf="*"
python-dotenv="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
